# tg_api_gen

./: .gitignore  build.py  changelog.md  main.py  pyproject.toml  readme.md  usage.py
tg_api_gen/: __init__.py  android_devices.txt
