[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
dependencies = []
name = "tg_api_gen"
version = "23.0.2"
description = "lightweight skript that generates realistic device_model, app_verion, system_version for telegram"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
[[project.authors]]
name = "gmanka"
email = "gmankab@gmail.com"

[project.urls]
Homepage = "https://github.com/gmankab/tg_api_gen"
